// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcResourceEditorForm Should render empty resource form 1`] = `
<abc-resource-editor-form
  height={0}
  iframeId="id111"
  loading={false}
  resourceForm={null}
>
  <div
    className="ta-component abc-resource-editor-form"
    data-lego="react"
    style={Object {}}
  />
</abc-resource-editor-form>
`;

exports[`AbcResourceEditorForm Should render resource editor form 1`] = `
<abc-resource-editor-form
  height={0}
  iframeId="id1"
  loading={false}
  resourceForm={
    Object {
      "form_url": "form_url",
    }
  }
>
  <div
    className="ta-component abc-resource-editor-form"
    data-lego="react"
    style={Object {}}
  >
    <abc-resource-editor-form__iframe
      height={0}
      key="iframe"
      name="id1"
      src="form_url"
    >
      <iframe
        allowtransparency="true"
        className="ta-component abc-resource-editor-form__iframe"
        data-lego="react"
        frameBorder="0"
        height={0}
        hspace="0"
        marginHeight="0"
        marginWidth="0"
        name="id1"
        src="form_url"
        style={Object {}}
        vspace="0"
      />
    </abc-resource-editor-form__iframe>
  </div>
</abc-resource-editor-form>
`;

exports[`AbcResourceEditorForm Should render resource editor form with error 1`] = `
<abc-resource-editor-form
  error={[Error]}
  height={0}
  iframeId="id2"
  loading={false}
  resourceForm={
    Object {
      "form_url": "form_url",
    }
  }
>
  <div
    className="ta-component abc-resource-editor-form"
    data-lego="react"
    style={Object {}}
  >
    <Message
      key="error"
      type="error"
    >
      <div
        className="Message Message_type_error Message_view_default"
      >
        <span
          className="Message-Body"
        >
          <Error
            data={
              Object {
                "message": Object {
                  "en": "Текст en message",
                  "ru": "Текст ru message",
                },
              }
            }
          >
            <div
              className="Error"
            >
              <TitlePlace
                className="Error-TitlePlace"
                data={
                  Object {
                    "message": Object {
                      "en": "Текст en message",
                      "ru": "Текст ru message",
                    },
                  }
                }
                key="title-place"
              />
              <MessagePlace
                className="Error-MessagePlace"
                data={
                  Object {
                    "message": Object {
                      "en": "Текст en message",
                      "ru": "Текст ru message",
                    },
                  }
                }
                key="message-place"
                type="abc"
              >
                <div
                  className="Error-MessagePlace"
                >
                  Текст ru message
                </div>
              </MessagePlace>
            </div>
          </Error>
        </span>
      </div>
    </Message>
    <abc-resource-editor-form__iframe
      height={0}
      key="iframe"
      name="id2"
      src="form_url"
    >
      <iframe
        allowtransparency="true"
        className="ta-component abc-resource-editor-form__iframe"
        data-lego="react"
        frameBorder="0"
        height={0}
        hspace="0"
        marginHeight="0"
        marginWidth="0"
        name="id2"
        src="form_url"
        style={Object {}}
        vspace="0"
      />
    </abc-resource-editor-form__iframe>
  </div>
</abc-resource-editor-form>
`;

exports[`AbcResourceEditorForm Should render resource editor form with loading 1`] = `
<abc-resource-editor-form
  height={0}
  iframeId="id111"
  loading={true}
  resourceForm={
    Object {
      "form_url": "form_url",
    }
  }
>
  <div
    className="ta-component abc-resource-editor-form"
    data-lego="react"
    style={Object {}}
  >
    <spin2
      key="spinner"
      mix={
        Object {
          "block": "abc-resource-editor-form",
          "elem": "spin",
          "mods": Object {},
        }
      }
      position="center"
      progress={true}
      size="m"
      tone="default"
      view="default"
    >
      <div
        className="spin2 spin2_size_m spin2_view_default spin2_tone_default spin2_position_center spin2_progress_yes abc-resource-editor-form__spin"
        data-lego="react"
        style={Object {}}
      />
    </spin2>
    <abc-resource-editor-form__iframe
      height={0}
      key="iframe"
      name="id111"
      src="form_url"
    >
      <iframe
        allowtransparency="true"
        className="ta-component abc-resource-editor-form__iframe"
        data-lego="react"
        frameBorder="0"
        height={0}
        hspace="0"
        marginHeight="0"
        marginWidth="0"
        name="id111"
        src="form_url"
        style={Object {}}
        vspace="0"
      />
    </abc-resource-editor-form__iframe>
  </div>
</abc-resource-editor-form>
`;
